<resources>
    <string name="app_name">Umpire Buddy</string>
    <string name="action_settings">Settings</string>
    <string name="Title">Umpire Buddy</string>
    <string name="Outs">Outs:</string>
    <string name="Out_Count">0</string>
    <string name="Strikes">Strike!</string>
    <string name="StrikeCount">0</string>
    <string name="BallCount">0</string>
    <string name="Balls">Ball!</string>
    <string name="Walk">Walk!</string>
    <string name="Out">Out!</string>
    <string name="OK">OK</string>
    <string name="about_message">Umpire Buddy by Nathaniel Barnett</string>
</resources>
